--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/alexei-kosykh/MERN-eCommerce#readme",
   "dependencies": {
     "axios": "^0.26.1",
+    "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.9"
